<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#00BCD4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="116dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/openSearchBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#009688"
                android:text="@string/search_function" />

            <Button
                android:id="@+id/openChirBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00BCD4"
                android:text="@string/surgery_view" />

            <Button
                android:id="@+id/openMedBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#03A9F4"
                android:text="@string/med_view" />

            <Button
                android:id="@+id/openNeuroBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#2196F3"
                android:text="@string/neuro_view" />

            <Button
                android:id="@+id/openPsychBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3F51B5"
                android:text="@string/psych_view" />

            <Button
                android:id="@+id/openGynBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#673AB7"
                android:text="@string/gyn_pedi_view" />

            <Button
                android:id="@+id/openMiscBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#563297"
                android:text="@string/misc_view" />

            <Button
                android:id="@+id/openAgeCalcBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4CAF50"
                android:text="@string/agecalc_view" />

            <Button
                android:id="@+id/openTypeAndCodeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF9800"
                android:text="@string/type_and_code_view" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>